--- a/Expanding_Cards/index.html
+++ b/Expanding_Cards/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding Cards</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="./index.js" defer></script>
+    <link rel="stylesheet" href="./styles/style.css">
+    <script src="./scripts/index.js" defer></script>
 </head>
 <body>
     <div id="ex-cards">
