expanding cards using only 1 event listner

--- a/Expanding_Cards/index.html
+++ b/Expanding_Cards/index.html
@@ -10,11 +10,11 @@
 <body>
     <div id="ex-cards">
         <div class="container">
-            <div id="img-1" class="img active" style="background: url('./imgs/clay-banks-vPsvT8tkLSQ-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
-            <div id="img-2" class="img" style="background: url('./imgs/erik-skof-7LXrJSyS0BA-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
-            <div id="img-3" class="img " style="background: url('./imgs/grab-pH0W0FjYt5k-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
-            <div id="img-4" class="img" style="background: url('./imgs/jasper-gribble-i7GXXVEzAmI-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
-            <div id="img-5" class="img" style="background: url('./imgs/juniperphoton-4IWX4eAGJCE-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
+            <div class="img active" style="background: url('./imgs/clay-banks-vPsvT8tkLSQ-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
+            <div class="img" style="background: url('./imgs/erik-skof-7LXrJSyS0BA-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
+            <div class="img " style="background: url('./imgs/grab-pH0W0FjYt5k-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
+            <div class="img" style="background: url('./imgs/jasper-gribble-i7GXXVEzAmI-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
+            <div class="img" style="background: url('./imgs/juniperphoton-4IWX4eAGJCE-unsplash.jpg') no-repeat center center/cover;"><h3>Explore the World</h3></div>
             
         </div>
     </div>
