--- a/EventKeyCodes/index.html
+++ b/EventKeyCodes/index.html
@@ -9,12 +9,12 @@
     <section id="disp">Press any key to get the keyCode</section>
     <div id="key-info"  class="container">
 
-        <div id="" >
+        <div  >
             <p>event.key</p>
             <div id="ekey"></div>
         </div>
     
-        <div id="" >
+        <div  >
             <p>event.code</p>
             <div id="ecode"></div>
         </div>
